testsuite/tests/typecheck/should_fail/T22940.hs
{-# LANGUAGE ParallelListComp #-}

x :: [(Int, Char)]
x = [ (a, b) | a <- [0 ..] | b <- "abcd", even a ]
