testsuite/tests/typecheck/should_fail/T22940.stderr

T22940.hs:4:48: error: [GHC-88464]
    Variable not in scope: a
